# rust-testing-utils

./: CHANGELOG.md  Cargo.toml  README.md  bacon.toml
src/: bin.rs  lib.rs  main.rs  utils.rs
test-macros/: Cargo.toml
test-macros/src/test_macro/: attributes.rs  mod.rs
test-macros/tests/: test_macro.rs
test-macros/tests/test_macro/: 01-parse-attributes.rs  02-missing-setup-attribute.rs  02-missing-setup-attribute.stderr  03-missing-teardown-attribute.rs  03-missing-teardown-attribute.stderr
tests/: server_cmd.rs
