workspace = { members = [ "test-macros" ] }
[package]
name = "testing-utils"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials" }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
test-macros = { path = "test-macros" }
derive_more = "0.99.18"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
serde = "1.0.203"
serde_json = "1.0.118"
assert_fs = { version = "1.1.1", features = ["color"] }
surf = "2.3.2"
testcontainers = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }